syntax = "proto3";

package user.v1;

option go_package = "github.com/golang-standards/project-layout/pkg/api/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  // Get user by ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);

  // Update user
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  // Delete user
  rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);

  // List users with pagination
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);

  // Get user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
}

// User message
message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  UserStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// User status enum
enum UserStatus {
  USER_STATUS_UNSPECIFIED = 0;
  USER_STATUS_ACTIVE = 1;
  USER_STATUS_INACTIVE = 2;
  USER_STATUS_SUSPENDED = 3;
}

// Create user request
message CreateUserRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
}

// Create user response
message CreateUserResponse {
  User user = 1;
}

// Get user request
message GetUserRequest {
  string id = 1;
}

// Get user response
message GetUserResponse {
  User user = 1;
}

// Get user by email request
message GetUserByEmailRequest {
  string email = 1;
}

// Update user request
message UpdateUserRequest {
  string id = 1;
  optional string email = 2;
  optional string first_name = 3;
  optional string last_name = 4;
  optional string phone = 5;
  optional UserStatus status = 6;
}

// Update user response
message UpdateUserResponse {
  User user = 1;
}

// Delete user request
message DeleteUserRequest {
  string id = 1;
}

// List users request
message ListUsersRequest {
  int32 page = 1;
  int32 page_size = 2;
  string filter = 3;
  string sort_by = 4;
}

// List users response
message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
}
